--- a/Super_Shop/src/main/webapp/resources/css/cssLayout.css
+++ b/Super_Shop/src/main/webapp/resources/css/cssLayout.css
@@ -8,30 +8,25 @@
 
 #wrapper {
     background-color: #c2dfef;
-    padding: 5px;
+    padding: 0px;
     margin: 0px;
 }
 
 #banner {
-    padding: 5px;
+    padding: 0px;
     margin: auto;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    width: 300px;
-    background-color: white;
+    text-align: center ;
 }
 
 #content {
     margin: auto;
     padding:0em;
-    width: 400px;
+    width:600px;
     border-style: solid;
     border-width: 0.1em;
 }
 
 .top {
-    background-color: #dddddd;
-    padding: 5px;
 }
 
 .content_wrapper {
