--- a/Super_Shop/src/main/webapp/resources/css/cssLayout.css
+++ b/Super_Shop/src/main/webapp/resources/css/cssLayout.css
@@ -21,7 +21,7 @@
 #content {
     margin: auto;
     padding:0em;
-    width:600px;
+    width:50%;
     border-style: solid;
     border-width: 0.1em;
 }
