--- a/Super_Shop/src/main/webapp/resources/css/cssLayout.css
+++ b/Super_Shop/src/main/webapp/resources/css/cssLayout.css
@@ -26,6 +26,11 @@
     border-width: 0.1em;
 }
 
+.info_block{
+    display:inline-block;
+    margin-right:3em;
+}
+
 .top {
 }
 
@@ -49,7 +54,7 @@
     -moz-border-radius: 0em 0em 0.3em 0.3em;
     background-color: grey;
     margin:0em;
-    padding: 0em;
+    padding: 0.3em;
     border-top-width: 0em;
 }
 
