--- a/Super_Shop/src/main/webapp/resources/css/default.css
+++ b/Super_Shop/src/main/webapp/resources/css/default.css
@@ -27,3 +27,13 @@ a:link:hover, a:visited:hover  {
   font-weight : bold;
   text-decoration : underline;
 }
+
+.text_left{
+    text-align: left;
+}
+
+#copyright{
+    text-align: left;
+    font-size: 0.1em;
+    font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+}
