--- a/Super_Shop/src/main/webapp/resources/css/default.css
+++ b/Super_Shop/src/main/webapp/resources/css/default.css
@@ -13,7 +13,7 @@ h1 {
     font-weight: bold;
     margin: 0px;
     padding: 0px;
-    color: #D20005;
+    color: black;
 }
 
 a:link, a:visited {
