--- a/Super_Shop/src/main/webapp/resources/css/default.css
+++ b/Super_Shop/src/main/webapp/resources/css/default.css
@@ -37,3 +37,8 @@ a:link:hover, a:visited:hover  {
     font-size: 0.1em;
     font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
+
+li{
+    
+    display:inline;
+}
