Changed to fixed pixel layout for content for ACE faces and started adding bean methods

--- a/Super_Shop/src/main/webapp/resources/css/cssLayout.css
+++ b/Super_Shop/src/main/webapp/resources/css/cssLayout.css
@@ -20,7 +20,7 @@
 
 #content {
     margin: auto;
-    width:55%;
+    width:850px;
     border-style: solid;
     border-width: 0.1em;
     padding:1em;
