Account page added

--- a/Super_Shop/src/main/webapp/resources/css/cssLayout.css
+++ b/Super_Shop/src/main/webapp/resources/css/cssLayout.css
@@ -62,6 +62,7 @@
     background-color: grey;
     margin:0em;
     border-top-width: 0em;
+    margin-bottom: 5em;
 }
 
 #top a:link, #top a:visited {
